src/test/deca/syntax/invalid/invalid_char.deca
// Description :
//    charactère invalid
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input 'int'

int a = 5;
int b = 10;
int c = a $ b;
